--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 	</parent>
 	<groupId>com.fss</groupId>
 	<artifactId>warrini</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>warrini</name>
-	<description>warrini</description>
+	<description>an educational application</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -106,6 +106,7 @@
 			<artifactId>itext</artifactId>
 			<version>2.1.7</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-controls</artifactId>
@@ -118,11 +119,6 @@
 		</dependency>
 		<dependency>
 			<groupId>org.openjfx</groupId>
-			<artifactId>javafx-controls</artifactId>
-			<version>17.0.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-swing</artifactId>
 			<version>17.0.2</version>
 		</dependency>
@@ -131,6 +127,13 @@
 			<artifactId>playwright</artifactId>
 			<version>1.42.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+
+
 
 
 
